<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.quelea.Control" >

     <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/title_activity_about"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_feedback"
        android:orderInCategory="100"
        android:title="@string/action_feedback"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_translate"
        android:orderInCategory="100"
        android:title="@string/action_translate"
        app:showAsAction="never"/>
     
     <item
        android:id="@+id/action_logout"
        android:orderInCategory="200"
        android:title="@string/action_logout"
        app:showAsAction="never"/>
     
     <item
        android:id="@+id/action_options"
        android:orderInCategory="300"
        android:title="@string/pref_title_activity_settings"
        app:showAsAction="never"/>

</menu>
