<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:myapp="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/msg_search_tooltip"
        myapp:actionLayout="@layout/partial_search_view"
        myapp:showAsAction="always|collapseActionView"
        myapp:actionViewClass="android.support.v7.widget.SearchView"/>

    <item
        android:id="@+id/help"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/title_search_help"
        myapp:showAsAction="always" />

    <item
        android:id="@+id/edit_book"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/action_change_book_or_translation"
        myapp:showAsAction="always" />

    <item
        android:id="@+id/record"
        android:icon="@drawable/btn_record"
        android:title="@string/action_start_recording"
        myapp:showAsAction="always"/>

</menu>