<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/selectTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/msg_select_song"
        android:textStyle="bold"
        android:textSize="15sp"/>
    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:id="@+id/dialogListView"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_yes"
            android:layout_width="wrap_content"
            android:minWidth="100dp"
            android:layout_height="match_parent"
            android:clickable="true"
            android:text="@string/action_yes_label"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:focusable="true" />

        <Button
            android:id="@+id/btn_no"
            android:layout_width="wrap_content"
            android:minWidth="100dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:clickable="true"
            android:text="@string/action_no_label"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:focusable="true" />
        <Button
            android:id="@+id/btn_neutral"
            android:layout_width="wrap_content"
            android:minWidth="100dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:clickable="true"
            android:text="@string/action_cancel_label"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:focusable="true" />
    </LinearLayout>

</LinearLayout>