<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.quelea.mobileremote.crashHandling.CrashActivity">

    <TextView
        android:id="@+id/crashHeadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_crash"
        android:textSize="18sp" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/crashText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:gravity="center">

        <Button
            android:id="@+id/exitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/btn_navigation"
            android:text="@string/action_exit" />

        <Button
            android:id="@+id/reportButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/btn_navigation"
            android:text="@string/action_report" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/crashText">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="bottom"
            android:adjustViewBounds="true"
            android:maxHeight="120dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_quelea_crash" />

    </RelativeLayout>

    <TextView
        android:id="@+id/crashText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/crashHeadline"
        android:background="@null"
        android:maxLines="10000"
        android:scrollbars="vertical"
        android:text="@string/title_crash" />

</RelativeLayout>
