<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/troubleshootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.quelea.mobileremote.activities.TroubleshootingActivity">

    <TextView
        android:id="@+id/troubleshootTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/troubleshoot_title_activity"
        android:textSize="@dimen/plain_text_size" />

    <RelativeLayout
        android:id="@+id/layoutSlide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/troubleshootTitle"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/troubleshootText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="@dimen/plain_text_size" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/troubleshootImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutSlide"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="76dp"
        android:gravity="center">

        <Button
            android:id="@+id/previousTip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/btn_navigation"
            android:text="@string/troubleshoot_action_previous"
            android:textSize="@dimen/plain_text_size" />

        <Button
            android:id="@+id/problemFound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/btn_navigation"
            android:paddingEnd="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingStart="5dp"
            android:text="@string/troubleshoot_action_this_worked"
            android:textSize="@dimen/plain_text_size" />

        <Button
            android:id="@+id/nextTip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_navigation"
            android:text="@string/troubleshoot_action_next"
            android:textSize="@dimen/plain_text_size" />
    </LinearLayout>

    <Button
        android:id="@+id/nothingWorked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:background="@drawable/btn_navigation"
        android:paddingEnd="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingStart="5dp"
        android:text="@string/troubleshoot_action_nothing_worked"
        android:textSize="@dimen/plain_text_size"
        android:visibility="gone" />

</RelativeLayout>
